--- a/workflows/translation.yaml
+++ b/workflows/translation.yaml
@@ -14,7 +14,7 @@ jobs:
         run: sudo apt install -y gettext
 
         #get Repository basename, use with ${{ env.REPO_NAME }}
-      - name: get-name
+      - name: get Repository name
         run: |
           echo "REPO_NAME=$(basename ${{ github.repository }})" >> $GITHUB_ENV
 
@@ -22,8 +22,8 @@ jobs:
       - name: checkout target repository (this)
         uses: actions/checkout@v3
         with: 
-          repository: $GITHUB_REPOSITORY
-          path: $GITHUB_REPOSITORY
+          repository: ${{ github.repository }}
+          path: ${{ github.repository }}
 
         # check out destination repository
       - name: checkout gettext-locale
@@ -31,11 +31,12 @@ jobs:
         with: 
           repository: kanboard-ng/gettext-locale
           path: kanboard-ng/gettext-locale
+          ssh-key: ${{ secrets.GETTEXT_DEPLOY_SECRET }}
 
         # fetch target repository for new translations
       - name: fetch translations
         run: 
-          find ./$GITHUB_REPOSITORY/ -type f -name "*.php" | 
+          find ./${{ github.repository }}/ -type f -name "*.php" | 
           xargs xgettext -o kanboard-ng/gettext-locale/${{ env.REPO_NAME }}.pot -L PHP -kt -ke --from-code=UTF-8 --add-comments
 
       # commit to destination repository
@@ -43,4 +44,3 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           repository: kanboard-ng/gettext-locale
-
